feat(ops): implement file management and fix layout synchronization
This commit introduces full file lifecycle management and resolves critical UI scaling bugs.
1. File Operations: Integrated Recycle Bin (Java 21 Desktop API), permanent deletion, and Windows Explorer selection.
2. In-Memory Pruning: Implemented 'Tree Pruning' in FileNode.java for instant UI updates without rescanning.
3. Scaling Bug Fix: Established a 1000x1000 Logical Coordinate System across the Treemap engine and Canvas, eliminating the '15% gap' and 'half-empty window' scaling artifacts.
4. Bi-directional Sync: Added high-contrast selection highlighting (double border + glow) synchronized between the File Tree and Treemap Canvas.
5. UI Modularization: Extracted DeleteConfirmationDialog and PropertiesDialog into standalone components.